tests/fixtures/invalid/str_div_dict.py
# Cannot divide Str and Dict[str, int]
x: float = "hello" / {"a": 1}
